added swagger for plans creation
